[metadata]
name = spectrogrism
version = attr: spectrogrism.__version__
description = Grism-based spectrograph modeling
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Yannick Copin
author_email = y.copin@ipnl.in2p3.fr
license = LGPL v3.0
license_files = LICENSE
url = https://gitlab.in2p3.fr/ycopin/spectrogrism
keywords = astronomy, astrophysics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    pandas
    xarray
    astropy
    iminuit>2.0.0
    pyyaml

[options.package_data]
* = data/*

[options.extras_require]
docs = nbsphinx; ipython
mcmc = emcee; corner
plot = mpld3
tests = pytest; coverage

[build_sphinx]
source-dir = doc/
build-dir = doc/_build
all_files = 1

[coverage:run]
source = spectrogrism
omit =
   */conftest.py
   */*tests/*

[coverage:report]
#show_missing = false
exclude_lines =
    pragma: no cover
    def __repr__
    def _ipython_key_completions_
    raise NotImplementedError
    if __name__ == .__main__.:
