[metadata]
name = mastermind
version = attr: mastermind.__version__
description = Jeu du Mastermind
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Constance GANOT and Olivia VIDAL VELAZQUEZ
author_email = constance.ganot@etu.univ-lyon1.fr and olivia.vidal-velazquez@etu.univ-lyon1.fr
license = LGPL v3.0
license_files = LICENSE
url = https://gitlab.in2p3.fr/constance.ganot/mastermind
keywords = game , mastermind
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Gamers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Game

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    rich

[options.package_data]
* = config/*

[options.extras_require]
docs = nbsphinx; ipython
mcmc = emcee; corner
plot = mpld3
tests = pytest; coverage

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1


